--- a/src/output.css
+++ b/src/output.css
@@ -706,6 +706,18 @@ video {
   margin-top: 97px;
 }
 
+.mt-40 {
+  margin-top: 10rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -799,6 +811,11 @@ video {
   height: 100vh;
 }
 
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -861,6 +878,12 @@ video {
 .scale-95 {
   --tw-scale-x: .95;
   --tw-scale-y: .95;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-100 {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1146,6 +1169,10 @@ video {
   background-image: url('/public/img/paw-pattern-light.png');
 }
 
+.bg-\[url\(\'\/public\/img\/hero-daycare\.jpg\'\)\] {
+  background-image: url('/public/img/hero-daycare.jpg');
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -1182,6 +1209,10 @@ video {
 
 .p-40 {
   padding: 10rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-10 {
@@ -1244,6 +1275,16 @@ video {
   padding-right: 1rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 .pb-16 {
   padding-bottom: 4rem;
 }
@@ -1272,6 +1313,42 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pt-52 {
+  padding-top: 13rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pt-40 {
+  padding-top: 10rem;
+}
+
+.pb-96 {
+  padding-bottom: 24rem;
+}
+
+.pb-44 {
+  padding-bottom: 11rem;
+}
+
+.pb-52 {
+  padding-bottom: 13rem;
+}
+
+.pb-48 {
+  padding-bottom: 12rem;
+}
+
+.pt-44 {
+  padding-top: 11rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1282,6 +1359,10 @@ video {
 
 .font-\[\'Barlow\'\] {
   font-family: 'Barlow';
+}
+
+.font-\[\] {
+  font-family: ;
 }
 
 .text-2xl {
